tests/type_tests/negatives/maybe_map_arguments.py
from zen import Maybe, Just


def test() -> Maybe[str]:
	return Just(1).map(lambda a: a.lower())
